# gatewaynode_n4_rocket

./: .gitignore  Cargo.toml  Dockerfile  EXAMPLE.env  Makefile.toml  Rocket.toml  publish.bash
src/: main.rs
static/: fonts
static/bootstrap5/: package-lock.json  package.json  webpack.config.js
static/bootstrap5/.obsidian/: workspace
static/bootstrap5/archive/: package-lock.json  webpack.config.js
static/bootstrap5/docs/: calendar.html  charts-apexcharts.html  charts-chartjs.html  dashboard-analytics.html  dashboard-crypto.html  dashboard-default.html  docs-changelog.html  docs-customization.html  docs-installation.html  docs-introduction.html  docs-plugins.html  forms-advanced-inputs.html  forms-basic-inputs.html  forms-editors.html  forms-input-groups.html  forms-layouts.html  forms-validation.html  forms-wizard.html  icons-feather.html  icons-font-awesome.html  index.html  maps-google.html  maps-vector.html  notifications.html  pages-chat.html  pages-clients.html  pages-invoice.html  pages-pricing.html  pages-profile.html  pages-tasks.html  (+19 more)
static/css/: bundle.css  dark.css  demo-bundle.css  global.css  non-webpack.css
static/javascript/: app.js  bundle.js  code.js  demo-bundle.js  demo-bundle.js.map  tsparticles.js
static/svelte-demo/: rollup.config.js
templates/: article.tera  base-testing.tera  base.tera  dashboard-saas.html  dashboard-social.html  directory.tera  index.tera  info_page.tera  old_index.tera  old_old_index.tera  pages-blank.html  sitemap.tera  svelte-base.tera  testing.tera
tests/: README.md
tests/test_site/: section-2.menu_meta
(+23 files in other folders)
