[package]
name = "gatewaynode_n4"
version = "0.1.0"
authors = ["anon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
# n4 = { path="/home/anon/code/n4" }
n4 = { git="https://github.com/gatewaynode/n4.git", branch="main" }
# Development dependencies
# file_tree = { path="/home/anon/code/file_tree" }
file_tree = { git="https://github.com/gatewaynode/file_tree.git", branch="main" }
serde = "1.0.118"
serde_json = "1.0.61"
serde_derive = "1.0.118"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = "0.4.19"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "serve"]

